# Version 0.13

## New Features

- Improve songbar, add threading to non-async bgworker, refactor some stuff -- kaneryu on 2025-01-02



# Version 0.12

## New Features

- complete alpha songbar -- kaneryu on 2024-12-26



# Version 0.11

## New Features

- Added song cover, song details to the songbar -- kaneryu on 2024-12-25



# Version 0.10

## New Features

- add prelim stuff for songbar -- kaneryu on 2024-12-23



# Version 0.9

## New Features

- add pages to the app using a URL scheme, with innertune:// as the protocol -- kaneryu on 2024-12-21

## Bugfixes

- add versions as datafiles, add app icon to app. -- kaneryu on 2024-12-22



# Version 0.8

## New Features

- added images to search results in QML, also refactored a few things to do so. -- kaneryu on 2024-12-21

## Bugfixes

- fix version file not being found causing application crash -- kaneryu on 2024-12-21



# Version 0.7

## New Features

- added autoversioning using conventional commits -- kaneryu on 2024-12-19

## Bugfixes

- clean up autover.py for use in commit hooks -- kaneryu on 2024-12-19
- fix bug in autover where commit history was reversed. -- kaneryu on 2024-12-19



# Version 0.6

## New Features

- Added preliminary version of search, and made connection the the UI. it can also play songs from the results. -- kaneryu on 2024-12-19



# Version 0.5

## New Features

- try a fix for build failing -- kaneryu on 2024-12-18

## Bugfixes

- Update run.py -- kaneryu on 2024-12-19
- switched from using --standalone to --mode=app -- kaneryu on 2024-12-19
- fix issues caused queue module having a name conflict -- kaneryu on 2024-12-19



# Version 0.4

## New Features

- add requirements so workflow functions -- kaneryu on 2024-12-18

## Bugfixes

- update action -- kaneryu on 2024-12-18
- Move yt_dlp fix (occured in untracked file, involved deleting a bunch of code) into a config.yaml. Also included proper dependencies in the requirements.txt for the aciton. -- kaneryu on 2024-12-18