@@ -182,56 +182,6 @@ test_cache/
 
 .git/
 nuitka-crash-report.xml
-.vs/PythonSettings.json
-.vs/slnx.sqlite
-.vs/VSWorkspaceState.json
-.vs/InnerTuneDesktop/CopilotIndices/17.12.38.29086/CodeChunks.db
-.vs/InnerTuneDesktop/CopilotIndices/17.12.38.29086/SemanticSymbols.db
-.vs/InnerTuneDesktop/CopilotIndices/17.12.38.29086/SemanticSymbols.db-shm
-.vs/InnerTuneDesktop/CopilotIndices/17.12.38.29086/SemanticSymbols.db-wal
-.vs/InnerTuneDesktop/FileContentIndex/924002d6-59c7-4be5-a4a2-ee1028f352b0.vsidx
-.vs/InnerTuneDesktop/FileContentIndex/c66f80ee-d3e6-4369-8c3b-c1e8e121f65c.vsidx
-.vs/InnerTuneDesktop/copilot-chat/7845776d/sessions/5fcdd620-53cf-4ecc-bf83-b6dadd9632f8
-.vs/InnerTuneDesktop/copilot-chat/7845776d/sessions/361c90ae-0d4d-4068-8d15-4260f3fc36b3
-.vs/InnerTuneDesktop/copilot-chat/7845776d/sessions/b13f7a1d-016b-4820-a2b0-01de19addf7b
-.vs/InnerTuneDesktop/copilot-chat/7845776d/sessions/c249010a-b1d9-4187-b98f-4486d0941d31
-.vs/InnerTuneDesktop/v17/.wsuo
-.vs/InnerTuneDesktop/v17/DocumentLayout.backup.json
-.vs/InnerTuneDesktop/v17/DocumentLayout.json
-data/cache/(27399499ad89dce2b478e6d140b3a9d0)cache_metadata.json
-data/images_cache/(27399499ad89dce2b478e6d140b3a9d0)cache_metadata.json
-data/images_cache/65a472e77c5b01f803388b87ff7de65f.jpg
-data/images_cache/442e0d548fbb00f6d907924ccddc64cb.png
-data/images_cache/885ff85ffe0147d59caa4794eef20545.png
-data/images_cache/9347e7425fbef6d55e697f2c0d265d12.png
-data/images_cache/1527120f91bb0441238ee9715d512e7b.jpg
-data/images_cache/20927783abcfbdc4194c68d0ffaaeb5d.png
-data/images_cache/a122de7936ce0e3f72ab3853ec88c301.png
-data/images_cache/b5c83087b8831e29549b8a5b67100ab1.png
-data/images_cache/bdbf8669332ac8752bb55d11da641d59.jpg
-data/images_cache/befc0de15167a1c960f5da84d1b80b82.png
-data/images_cache/cf331d1f5a52823b0e9b40296f0db1e9.png
-data/images_cache/f5af5f30c444bba5f7a623edc94486b4.jpg
-data/song_datastore/(27399499ad89dce2b478e6d140b3a9d0)dataStore_metadata.json
-data/song_datastore/a3mxLL7nX1E_downloadMeta.json
-data/song_datastore/a3mxLL7nX1E.webm
-data/song_datastore/GXYHa5n_VhI_downloadMeta.json
-data/song_datastore/GXYHa5n_VhI.webm
-data/song_datastore/r76AWibyDDQ_downloadMeta.json
-data/song_datastore/r76AWibyDDQ.webm
-data/song_datastore/V8zTE8-5KOo_downloadMeta.json
-data/song_datastore/V8zTE8-5KOo.webm
-data/song_datastore/YPV676YeHNg_downloadMeta.json
-data/song_datastore/YPV676YeHNg.webm
-data/songs_cache/(27399499ad89dce2b478e6d140b3a9d0)cache_metadata.json
-data/songs_cache/a3mxLL7nX1E_info
-data/songs_cache/DimcNLjX50c_info
-data/songs_cache/DimcNLjX50c_playbackinfo
-data/songs_cache/fB8elptKFcQ_info
-data/songs_cache/fB8elptKFcQ_playbackinfo
-data/songs_cache/GXYHa5n_VhI_info
-data/songs_cache/r76AWibyDDQ_info
-data/songs_cache/V8zTE8-5KOo_info
-data/songs_cache/V8zTE8-5KOo_playbackinfo
-data/songs_cache/YPV676YeHNg_info
+.vs/
+data/
 playbackinfo.json
